--- a/docs/README_link_repair.adoc
+++ b/docs/README_link_repair.adoc
@@ -11,12 +11,14 @@
 :toc: auto
 :toc-title: Содержание
 :sectnums:
+:pdf-themesdir: themes
+:pdf-theme: base-theme.yml
 :name: tw_utilities.exe
 :script-name: link-repair
 
 == Описание
 
-Скрипт проверяет и исправляет некорректные ссылки в файлах проекта.
+Скрипт проверяет и исправляет некорректные ссылки в файлах проекта, а также проверяет уникальность якорей.
 
 == Для чего нужно?
 
@@ -42,8 +44,7 @@ PATHDIR
   Команда для проверки и исправления ссылок в файлах документации
 
 Аргументы:
-  pathdir                                Директория, в которой обрабатываются
-                                         все *.md- и *.adoc-файлы.
+  pathdir                                Путь до директории для обработки *.md- и *.adoc-файлов
 
 Опции:
   -d, --dry-run                          Флаг вывода некорректных ссылок на экран без изменения файлов.
@@ -61,8 +62,7 @@ PATHDIR
   --keep-logs                            Флаг сохранения директории с лог-файлом по завершении работы
                                          в штатном режиме.
                                          По умолчанию: False, лог-файл и директория удаляются
-  -h, --help                             Вывести справочную информацию на
-                                         экран и завершить работу
+  -h, --help                             Вывести справочную информацию на экран и завершить работу
 ----------------------------------------------------------------------------------------------------
 ----
 
@@ -140,8 +140,7 @@ invalid-anchor // <1>
 Однако в PDF это нарушает работу ссылок.
 В HTML такие якори находятся на разных страницах и никак не взаимодействуют друг с другом.
 В PDF такие якори не позволяют однозначно привязать их к определенным местам в тексте.
-Ввиду этого ссылки останутся в создаваемом документе, но не будут куда-либо переходить или выполнять любое другое
-действие.
+Ввиду этого ссылки останутся в создаваемом документе, но не будут куда-либо переходить или выполнять любое другое действие.
 ****
 
 .Якорь ... в файле ... не найден
@@ -192,8 +191,7 @@ invalid-anchor // <1>
 -------------------------------------------------
 ----
 
-Означает, что в файле *<2>* обнаружен текст *<1>*, попадающий под паттерн ссылки, но имеющий синтаксическую ошибку,
-которая не позволяет обработать этот текст далее.
+Означает, что в файле *<2>* обнаружен текст *<1>*, попадающий под паттерн ссылки, но имеющий синтаксическую ошибку, которая не позволяет обработать этот текст далее.
 
 === Предупреждения и оповещения
 
@@ -205,8 +203,7 @@ invalid-anchor // <1>
 ../and_another/file/#anchor/  ! // <3>
 ----
 
-Означает, что в файле *<1>* обнаружена некорректная ссылка *<3>*, но удалось ее автоматически исправить на верную
-ссылку *<2>*.
+Означает, что в файле *<1>* обнаружена некорректная ссылка *<3>*, но удалось ее автоматически исправить на верную ссылку *<2>*.
 
 .Проверка дублирования якорей отключена пользователем
 ----
@@ -215,8 +212,7 @@ invalid-anchor // <1>
 
 Означает, что якори не анализируются.
 
-NOTE: Отображается только при отсутствии опции `-a`/`--anchor-disable` или при отключении опции "Проверить якори
-внутри файлов".
+NOTE: Отображается только при отсутствии опции `-a`/`--anchor-disable`.
 
 .{two-colons}Изменено{two-colons}Файл
 [source,console]
@@ -235,8 +231,7 @@ NOTE: Отображается только при отсутствии опци
 
 Означает, что содержимое файла *<1>* обновлено.
 
-NOTE: Отображается только при отсутствии опции `-d`/`--dry-run` или при активации опции "Изменить файлы в
-директории".
+NOTE: Отображается только при отсутствии опции `-d`/`--dry-run`.
 
 .Работа завершена
 [source,console]
@@ -254,14 +249,13 @@ NOTE: Отображается только при отсутствии опци
 
 Означает, что отображенные изменения не были применены.
 
-NOTE: Отображается только при использовании опции `-d`/`--dry-run` или при отключении опции "Изменить файлы в
-директории".
+NOTE: Отображается только при использовании опции `-d`/`--dry-run`.
 
 == Некоторые особенности работы
 
 * Проверяются только Markdown- и AsciiDoc-файлы, все остальные (+*+.txt, без расширения, ...) игнорируются.
-* При использовании в операционной системе Windows скрипт должен располагаться на том же диске (томе), что и
-директория, для которой он используется. Не устранимо ввиду принципов работы операционной системы.
+* При использовании в операционной системе Windows скрипт должен располагаться на том же диске (томе), что и директория, для которой он используется.
+Не устранимо ввиду принципов работы операционной системы.
 * Ссылки, которые указывают на файлы, находящиеся не в заданной директории, помечаются как некорректные.
 * Ссылки, начинающиеся с `http`, `mailto` и `/` игнорируются.
 * Нумерация строк начинается с 0.
