--- a/docs/README_list_files.adoc
+++ b/docs/README_list_files.adoc
@@ -11,6 +11,8 @@
 :toc: auto
 :toc-title: Содержание
 :sectnums:
+:pdf-themesdir: themes
+:pdf-theme: base-theme.yml
 :script-name: list-files
 :name: tw_utilities.exe
 
@@ -83,8 +85,7 @@ ROOT_DIR
                                          По умолчанию: _temp_folder, _temp_storage, private.
                                          Примечание. Аргумент не может использоваться одновременно с
                                          --all-dirs
-  --all-dirs                             Флаг обработки всех директорий.
-                                         По умолчанию: False.
+  --all-dirs                             Флаг обработки всех директорий. По умолчанию: False.
                                          Примечание. Аргумент не может использоваться одновременно с
                                          --ignored-dirs
   -f, --ignored-files <FILE> ... <FILE>  Перечень игнорируемых файлов. Может использоваться несколько раз.
@@ -95,33 +96,32 @@ ROOT_DIR
                                          По умолчанию: False, выводятся файлы с определенными именами.
                                          Примечание. Аргумент не может использоваться одновременно с
                                          --ignored-files
-  -e, --extensions "<EXT> ... <EXT>"     Обрабатываемые типы файлов. Задаются перечислением, разделяемые пробелом.
+  -e, --extensions "<EXT> ... <EXT>"     Обрабатываемые типы файлов, разделяемые пробелом.
                                          По умолчанию: md adoc.
                                          Примечание. Аргумент не может использоваться одновременно с
                                          --all-extensions
   --all-ext                              Флаг обработки файлов всех расширений.
-                                         По умолчанию: False, выводятся файлы определенных расширений.
+                                         По умолчанию: False, вывод файлов определенных расширений.
                                          Примечание. Аргумент не может использоваться одновременно с
                                          --extensions
   -l, --language <LANG>                  Язык файлов.
-                                         По умолчанию: "", выводятся все файлы независимо от языка.
+                                         По умолчанию: "", вывод всех файлов независимо от языка.
                                          Примечание. Аргумент не может использоваться одновременно с
                                          --all-languages
   --all-langs                            Флаг обработки файлов всех языков.
-                                         По умолчанию: True, выводятся файлы на любом языке.
+                                         По умолчанию: True, вывод файлов на всех языках.
                                          Примечание. Аргумент не может использоваться одновременно с
                                          --language
   -p, --prefix <PFX>                     Префикс, добавляемый к названиям файлов.
                                          По умолчанию: '- content/common/'
   --hidden / --no-hidden                 Флаг поиска скрытых файлов.
-                                         По умолчанию: False, скрытые файлы не выводятся
+                                         По умолчанию: False, исключение скрытых файлов из вывода
   --recursive / --no-recursive           Флаг рекурсивного поиска файлов.
                                          По умолчанию: True, поиск файлов по вложенным папкам
   --keep-logs                            Флаг сохранения директории с лог-файлом по завершении
                                          работы в штатном режиме.
                                          По умолчанию: False, лог-файл и директория удаляются
-  -h, --help                             Вывести справочную информацию на
-                                         экран и завершить работу
+  -h, --help                             Вывести справочную информацию на экран и завершить работу
 ----------------------------------------------------------------------------------------------------
 ----
 
