--- a/docs/README_validate_yaml.adoc
+++ b/docs/README_validate_yaml.adoc
@@ -11,6 +11,8 @@
 :toc: auto
 :toc-title: Содержание
 :sectnums:
+:pdf-themesdir: themes
+:pdf-theme: base-theme.yml
 :script-name: validate-yaml
 :name: tw_utilities.exe
 
@@ -60,8 +62,7 @@ include::partials/run.adoc[]
   --keep-logs                            Флаг сохранения директории с лог-файлом по завершении
                                          работы в штатном режиме.
                                          По умолчанию: False, лог-файл и директория удаляются
-  -h, --help                             Вывести справочную информацию на
-                                         экран и завершить работу
+  -h, --help                             Вывести справочную информацию на экран и завершить работу
 ----------------------------------------------------------------------------------------------------
 ----
 
