--- a/docs/README_terms.adoc
+++ b/docs/README_terms.adoc
@@ -11,6 +11,8 @@
 :toc: auto
 :toc-title: Содержание
 :sectnums:
+:pdf-themesdir: themes
+:pdf-theme: base-theme.yml
 :script-name: terms
 :name: tw_utilities.exe
 
@@ -77,7 +79,6 @@ TERMS
   --keep-logs                            Флаг сохранения директории с лог-файлом по завершении
                                          работы в штатном режиме.
                                          По умолчанию: False, лог-файл и директория удаляются
-  -h, --help                             Вывести справочную информацию на
-                                         экран и завершить работу
+  -h, --help                             Вывести справочную информацию на экран и завершить работу
 ----------------------------------------------------------------------------------------------------
 ----
