--- a/docs/README_repair_svg.adoc
+++ b/docs/README_repair_svg.adoc
@@ -31,20 +31,16 @@ include::partials/run.adoc[]
 
 === Опции скрипта
 
-[source,console,subs="attributes"]
+[source,console,subs="attributes+"]
 ----
 Использование:
 {name} {script-name}
--f/--file <FILE> ... <FILE>
--d/--dir <DIR>
---recursive
---keep-logs
+-f/--file <FILE> ... <FILE> | -d/--dir <DIR> | --recursive | --keep-logs | --h/--help
 
   Команда для исправления файлов SVG
 
 Опции:
-  -f, --file <FILE> ... <FILE>           Файл для обработки.
-                                         Может использоваться несколько раз
+  -f, --file <FILE> ... <FILE>           Файл для обработки. Может использоваться несколько раз
   -d, --dir <DIR>                        Директория для обработки
   --recursive / --no-recursive           Флаг рекурсивного поиска файлов.
                                          По умолчанию: True, поиск файлов по вложенным папкам
