--- a/docs/README_check_russian.adoc
+++ b/docs/README_check_russian.adoc
@@ -44,21 +44,18 @@ include::partials/run.adoc[]
 
 === Опции скрипта
 
-[source,console,subs="attributes"]
+[source,console,subs="attributes+"]
 ----
 Использование:
 {name} {script-name}
--f/--file <FILE> ... <FILE>
--d/--dir <DIR>
---recursive
---keep-logs
+-d/--dir <DIR> | -f/--file <FILE> ... <FILE> | --recursive | --keep-logs | --h/--help
 
   Команда для проверки наличия непереведенных слов
 
 Опции:
+  -d, --dir <DIR>                        Директория для обработки
   -f, --file <FILE> ... <FILE>           Перечень файлов для обработки.
                                          Может использоваться несколько раз
-  -d, --dir <DIR>                        Директория для обработки
   --recursive / --no-recursive           Флаг рекурсивного поиска файлов.
                                          По умолчанию: True, поиск файлов по вложенным папкам
   --keep-logs                            Флаг сохранения директории с лог-файлом по завершении
