--- a/docs/README_convert_tables.adoc
+++ b/docs/README_convert_tables.adoc
@@ -30,19 +30,12 @@ include::partials/run.adoc[]
 
 === Опции скрипта
 
-[source,console,subs="attributes"]
+[source,console,subs="attributes+"]
 ----
 Использование:
-{name} {script-name}
-Использование:
-__main__.py convert-tables <DOCX_FILE>
--p/--parse <DIR TABLES>
--t/--temp <TEMP DIR>
--r/--remove
--e/--escape
--f/--fix
--k/--keep
---keep-logs
+{name} {script-name} <DOCX_FILE>
+-p/--parse <DIR TABLES> | -t/--temp <TEMP DIR> | -e/--escape | -r/--remove | -f/--fix | -k/--keep |
+--keep-logs | --h/--help
 
   Команда для корректного извлечения таблиц из файлов docx в формат Markdown
 
@@ -54,11 +47,11 @@ __main__.py convert-tables <DOCX_FILE>
                                          Если не существует, то будет создана
   -t, --temp <TEMP DIR>                  Временная директория для скрипта. По умолчанию: ./_temp/.
                                          Если не существует, то будет создана
+  -e, --escape / --no-escape             Флаг экранирования символов '<', '>'.
+                                         По умолчанию: True, добавление '\' перед символами
   -r, --remove / --no-remove             Флаг удаления всех множественных пробелов и пробелов
                                          перед знаками препинания.
                                          По умолчанию: True, удаление всех дополнительных пробелов
-  -e, --escape / --no-escape             Флаг экранирования символов '<', '>'.
-                                         По умолчанию: True, добавление '\' перед символами
   -f, --fix / --no-fix                   Флаг удаления лишних пробелов и экранирования символов.
                                          По умолчанию: не задано, обработка определяется параметрами
                                          --preserve и --escape.
