--- a/docs/README_format_code.adoc
+++ b/docs/README_format_code.adoc
@@ -40,16 +40,15 @@ include::partials/run.adoc[]
 ----
 Использование:
 {name} {script-name}
--d/--dir <DIR> | -f/--file <FILE> ... <FILE> | -l/--length <LEN> | --recursive | --keep-logs |
---h/--help
+-d/--dir DIR | -f/--file FILE ... FILE | -l/--length LEN | --recursive | --keep-logs | --h/--help
 
   Команда для форматирования блоков кода
 
 Опции:
-  -d, --dir <DIR>                        Директория для обработки
-  -f, --file <FILE> ... <FILE>           Перечень файлов для обработки.
+  -d, --dir DIR                          Директория для обработки
+  -f, --file FILE ... FILE               Перечень файлов для обработки.
                                          Может использоваться несколько раз
-  -l, --length <LEN>                     Максимальная длина строки. По умолчанию: 84
+  -l, --length LEN                       Максимальная длина строки. По умолчанию: 84
                                          Примечание. Должно быть целым положительным числом
   --recursive / --no-recursive           Флаг рекурсивного поиска файлов.
                                          По умолчанию: True, поиск файлов по вложенным папкам
