--- a/docs/README_link_repair.adoc
+++ b/docs/README_link_repair.adoc
@@ -32,8 +32,8 @@ include::partials/run.adoc[]
 [source,console,subs="attributes+"]
 ----
 Использование:
-{name} {script-name} <PATHDIR>
--d/--dry-run | -n/--no-result | -a/--anchor-disable | -s/--separate | --skip-en | --keep-logs |
+{name} {script-name} PATHDIR
+-a/--anchor-disable | -d/--dry-run | -n/--no-result | -s/--separate | --skip-en | --keep-logs |
 --h/--help
 
   Команда для проверки и исправления ссылок в файлах документации
@@ -42,16 +42,16 @@ include::partials/run.adoc[]
   pathdir                                Путь до директории для обработки *.md- и *.adoc-файлов
 
 Опции:
+  -a, --anchor-disable                   Флаг поиска повторяющихся якорей.
+                                         По умолчанию: True, поиск дублирующихся якорей осуществляется
   -d, --dry-run                          Флаг вывода некорректных ссылок на экран без изменения файлов.
                                          По умолчанию: False, файлы перезаписываются
   -n, --no-result                        Флаг удаления файла с результатами работы скрипта по завершении
                                          работы в штатном режиме.
                                          По умолчанию: False, файл сохраняется
-  -a, --anchor-disable                   Флаг поиска повторяющихся якорей.
-                                         По умолчанию: True, поиск дублирующихся якорей осуществляется
   -s, --separate                         Флаг раздельной обработки файлов на различных языках.
-                                         По умолчанию: True, файлы на русском и английском обрабатываются
-                                         отдельно
+                                         По умолчанию: True, файлы на русском и английском
+                                         обрабатываются отдельно
   --skip-en                              Флаг обработки файлов только на русском языке.
                                          По умолчанию: False, обрабатываются файлы на обоих языках
   --keep-logs                            Флаг сохранения директории с лог-файлом по завершении работы
