--- a/docs/README_check_russian.adoc
+++ b/docs/README_check_russian.adoc
@@ -48,16 +48,18 @@ include::partials/run.adoc[]
 ----
 Использование:
 {name} {script-name}
--d/--dir <DIR> | -f/--file <FILE> ... <FILE> | --recursive | --keep-logs | --h/--help
+-d/--dir DIR | -f/--file FILE ... FILE | --recursive | --verbose | --keep-logs | --h/--help
 
   Команда для проверки наличия непереведенных слов
 
 Опции:
-  -d, --dir <DIR>                        Директория для обработки
-  -f, --file <FILE> ... <FILE>           Перечень файлов для обработки.
+  -d, --dir DIR                          Директория для обработки
+  -f, --file FILE ... FILE               Перечень файлов для обработки.
                                          Может использоваться несколько раз
   --recursive / --no-recursive           Флаг рекурсивного поиска файлов.
                                          По умолчанию: True, поиск файлов по вложенным папкам
+  --verbose / --no-verbose               Флаг подробного вывода.
+                                         По умолчанию: False, выводятся только ошибки
   --keep-logs                            Флаг сохранения директории с лог-файлом по завершении
                                          работы в штатном режиме.
                                          По умолчанию: False, лог-файл и директория удаляются
