--- a/docs/README_validate_yaml.adoc
+++ b/docs/README_validate_yaml.adoc
@@ -44,8 +44,8 @@ include::partials/run.adoc[]
 [source,console,subs="attributes+"]
 ----
 Использование:
-{name} {script-name} <YAML_FILE>
--o/--output <FILE> | --verbose | --keep-logs | --h/--help
+{name} {script-name} YAML_FILE
+-o/--output FILE | --verbose | --keep-logs | --h/--help
 
   Команда для валидации YAML-файла, используемого при генерации PDF
 
@@ -53,7 +53,7 @@ include::partials/run.adoc[]
   yaml_file                              Путь до файла PDF_*.yml
 
 Опции:
-  -o, --output <FILE>                    Файл для записи вывода. По умолчанию: вывод в консоль
+  -o, --output FILE                      Файл для записи вывода. По умолчанию: вывод в консоль
   --verbose / --no-verbose               Флаг подробного вывода.
                                          По умолчанию: False, выводятся только ошибки
   --keep-logs                            Флаг сохранения директории с лог-файлом по завершении
