fixed some bugs

--- a/docs/partials/no_russian_sample.adoc
+++ b/docs/partials/no_russian_sample.adoc
@@ -5,7 +5,8 @@
 
 [source#red-bg,console]
 ----
-В файле config\component\diameter.en.md найдены кириллические буквы в строках: 34, 40, 42 // <2>
+В файле config\component\diameter.en.md найдены кириллические буквы:
+В строке 20, начиная с 17 символа 'а' // <2>
 ----
 
 <1> Файл переведен полностью
